<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_event"
        android:id="@+id/dialog_editschedule_header"
        android:layout_weight="0.06"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/dialog_displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/event_name"
        android:layout_marginBottom="15dp">

        <requestFocus />

    </EditText>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:layout_weight="0.10"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/edit_start"
            android:layout_weight="0.72"
            android:textIsSelectable="false"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/end"
            android:id="@+id/edit_end"
            android:textSize="20sp" />
    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibrate"
        android:id="@+id/checkVibrate"
        android:checked="false" />

</LinearLayout>